Fit/Debug/Fit.log
Build started 8/22/2012 10:42:50 AM.
     1>Project "C:\Users\Brad\Documents\Visual Studio 2010\Projects\GeneticAlgorithm\Fit\Fit.vcxproj" on node 2 (build target(s)).
     1>InitializeBuildStatus:
         Creating "Debug\Fit.unsuccessfulbuild" because "AlwaysCreate" was specified.
       MessageBuildingWithCompiler:
         Building with Intel(R) C++ Compiler XE 12.1
       ClCompile:
         ***** ClCompile (Win32 - Intel C++)
         C:\Program Files (x86)\Intel\Composer XE 2011 SP1\bin\ia32\icl.exe /c /Qvc10 /Qlocation,link,"$(VCInstallDir)\bin" /I"C:\Program Files (x86)\Intel\Composer XE 2011 SP1\ipp\include" /Zi /nologo /W3 /O3 /Ot /Oy /Qftz /Qopt-matmul /Qparallel /Quse-intel-optimized-headers /D _IPP_PARALLEL_STATIC /D WIN32 /D _DEBUG /D _CONSOLE /D _UNICODE /D UNICODE /EHsc /MTd /GS /arch:SSE3 /fp:fast=2 /QaxSSE4.1 /QxHost /Zc:wchar_t /Zc:forScope /Yc"StdAfx.h" /Fp"Debug\Fit.pch" /Fo"Debug\\" /Fd"Debug\vc100.pdb" /Gd /TP stdafx.cpp /I"C:\Program Files (x86)\Intel\Composer XE 2011 SP1\mkl\include" /I"C:\Program Files (x86)\Intel\Composer XE 2011 SP1\mkl\include\fftw" /I"C:\Program Files (x86)\Intel\Composer XE 2011 SP1\mkl\include\ia32" /Qansi-alias- 
     1>icl : warning #10148: option '/Qftz' not supported
     1>icl : warning #10121: overriding '/archSSE3' with '/QxHost'
         stdafx.cpp
     1>C:\Users\Brad\Documents\Visual Studio 2010\Projects\GeneticAlgorithm\Fit\stdafx.h(24): error : cannot open source file "boost/random/mersenne_twister.hpp"
           #include <boost/random/mersenne_twister.hpp>
                                                       ^
         
         compilation aborted for stdafx.cpp (code 4)
     1>Done Building Project "C:\Users\Brad\Documents\Visual Studio 2010\Projects\GeneticAlgorithm\Fit\Fit.vcxproj" (build target(s)) -- FAILED.

Build FAILED.

Time Elapsed 00:00:04.19
